# edsoa-example

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
core/: main.cc
core/ExampleNode/: CMakeLists.txt  ExampleNode.cc  ExampleNode.cpp  ExampleNode.h
core/util/: CMakeLists.txt  util.cpp  util.h
meta/config/: config.ini
util/: util.cc  util.cpp  util.h
util/data/: ExampleData.hpp
